fix: add popup's span overflow, max-height

--- a/style.css
+++ b/style.css
@@ -659,6 +659,10 @@ img[alt="Star"] {
   overflow: hidden;
 }
 
+.member-photo:hover {
+  box-shadow: 0px 0px 16px 5px rgba(0,0,0,0.75);
+}
+
 .member-info {
   padding-top: 17px;
 }
@@ -860,6 +864,16 @@ textarea::placeholder {
   text-align: center;
   font-weight: 700;
   border-bottom: 1px solid;
+}
+
+.popup__subject,
+.popup__describe{
+  max-height: 40px;
+  overflow: hidden;
+}
+
+.popup__describe {
+  max-height: 250px;
 }
 
 .popup__button {
